delete geolocation & auto correct +62
